Fix img in travel tips on mobile version

--- a/css/media.css
+++ b/css/media.css
@@ -110,7 +110,6 @@
         width: 100%;
     }
     .card__img--h100 {
-        height: 100%;
         object-fit: cover;
     }
     .company {
